fix: aligning pictures at the center is done. looks good

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ a:link {
 /* ------------- mosaic ------------- */
 
 .mosaic-block {
-	float:left;
+	float:none;
 	position:relative;
     overflow:visible;
     width: 250px;
@@ -50,7 +50,7 @@ a:link {
 	-webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
 	-moz-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-	display: block;
+	display: inline-block;
 }
 
 .details {
@@ -160,6 +160,7 @@ a:link {
 /* ------------- contents ------------- */
 #contents {
 	clear: both;
+	text-align: center;
 	width: 100%;
 	padding-top: 50px;
 	padding-bottom: 50px;
@@ -186,6 +187,13 @@ a:link {
 	padding: 2em 4em;
 }
 
+#main .block {
+	text-align: center;
+	margin-right: auto;
+	margin-left: auto;
+	padding: 0;
+}
+
 #main .profile_img {
 	float: right;
 	width: 150px;
@@ -200,7 +208,6 @@ a:link {
 
 /* ------------- main .box ------------- */
 .figure {
-    float: left;
     line-height: 1.1;
     margin: 0 1.317% 5.0em 0;
     text-align: center;
